# pdns

./: .gitattributes  .travis.yml  README.md  excludes.txt  whitelist.txt
.circleci/: config.yml
.github/workflows/: build-and-test-all.yml  build-packages.yml  (+4 more)
build-scripts/: travis.sh
docs/: .gitignore  Makefile.am  conf.py  domainmetadata.rst  installation.rst  modes-of-operation.rst  settings.rst  upgrading.rst
modules/bindbackend/: Makefile.am  bindbackend2.cc
modules/luabackend/: Makefile.am
pdns/: Makefile.am  auth-main.cc  auth-packetcache.cc  common_startup.cc  dbdnsseckeeper.cc  distributor.hh  dns.cc  dns.hh  dnsdist-cache.cc  dnsdist-cache.hh  dnsdist-console.cc  dnsdist-lua-actions.cc  dnsdist-lua-bindings.cc  dnsdist-lua.cc  dnsdist-web.cc  dnsdist.cc  dnsdist.hh  dnsparser.hh  dnsrecords.cc  dnsrecords.hh  ednsoptions.hh  fuzz_dnsdistcache.cc  fuzz_packetcache.cc  lua-record.cc  lua-recursor4.cc  minicurl.cc  minicurl.hh  packethandler.cc  pdns.service.in  pdns_recursor.cc  pdnsutil.cc  qtype.hh  rcpgenerator.cc  rcpgenerator.hh  rfc2136handler.cc  sdig.cc  slavecommunicator.cc  statbag.hh  syncres.cc  test-dnsdist_cc.cc  (+11 more)
regression-tests/: start-test-stop
regression-tests.api/: runtests  runtests.py  test_Zones.py
regression-tests.auth-py/: test_LuaRecords.py
regression-tests.dnsdist/: test_Advanced.py  test_Basics.py  test_CDB.py  test_Caching.py  test_DOH.py  test_LMDB.py  test_Responses.py  test_RulesActions.py  test_Spoofing.py  test_Tags.py
regression-tests.recursor-dnssec/: recursortests.py  test_AggressiveNSECCache.py
(+83 files in other folders)
